--- a/carl-portfolio.github.io-main/index.html
+++ b/carl-portfolio.github.io-main/index.html
@@ -184,7 +184,7 @@
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Framework</button>
+            <button class="navbar-link" data-nav-link>Certificate</button>
           </li>
 
 
@@ -759,17 +759,17 @@
       </article>
 
 
-      <!--========FRAMEWORK=====-->
+      <!--========Certificate=====-->
 
 
-      <article class="framework" data-page="framework">
+      <article class="certificate" data-page="certificate">
 
         <header>
-          <h2 class="h2 article-title">Framework</h2>
+          <h2 class="h2 article-title">Certificate</h2>
         </header>
 
         <section class="framework-posts">
-
+<!--
           <ul class="framework-posts-list">
 
             <li class="framework-post-item">
@@ -857,7 +857,7 @@
             </li>
 
           </ul>
-
+-->
         </section>
 
       </article>
