--- a/carl-portfolio.github.io-main/index.html
+++ b/carl-portfolio.github.io-main/index.html
@@ -794,6 +794,7 @@
       <p class="certificate-org">USLS ISACA Student Group</p>
       <span class="certificate-date">Nov 8, 2025</span>
       <p class="certificate-desc">Participation in the conference on Governance and Trust.</p>
+      <p class="certificate-desc"></p>
       <button class="certificate-view-btn" data-cert="cert1">View</button>
     </div>
   </div>
